--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -21,7 +21,7 @@
                 <h4>Download Url : {{imgDetails.download_url}}</h4>
             </div>
             <div class="popup-footer">
-                <button type="button" (click)="close()">Go Back</button>
+                <button type="button" class="btn" (click)="close()">Go Back</button>
             </div>
             </ng-container>
         </div>
