--- a/src/app/pop-up/pop-up.component.css
+++ b/src/app/pop-up/pop-up.component.css
@@ -47,14 +47,12 @@
     cursor: pointer;
 }
 .img {
-    /* position: absolute; */
     width: 100%;
     height: 400px;
     border-radius: 5px;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* padding: 5px; */
     margin: 5px 0 5px 0
 }
  
@@ -68,6 +66,21 @@
     -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
     animation: l13 1s infinite linear;
 }
+
+.btn {
+    background-color: #808B96;
+        border: none;
+        border-radius: 5px;
+        color: black;
+        padding: 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
+        margin: 8px 12px;
+        width: 80px;
+        height: 30px;
+    }
  
 @keyframes l13 {
     100% {
