--- a/src/app/view-content/view-content.component.html
+++ b/src/app/view-content/view-content.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div style="display: flex; flex-flow: row; margin: 0 40% 0 40%">
-        <button class="btn" (click)="pagination('prev')">Back</button>
+        <button class="btn" (click)="pagination('prev')">Prev</button>
         <div class="pgNo">
             {{pageNo}}
         </div>
